2002-05-06  Darke <darkepaw@users.sourceforge.net>
	* files/U7file.cc: Fixed over-paranoid catch()ing.

2002-05-06  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: If map-editing, you can only drag things if in 'Move' mode.

2002-05-03  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/exult_studio.* updated
	* docs/xml/exult_studio.xml updated

2002-05-03  Dominik Reichardt <gigdr@tesionmail.de>
	* tools/*.1: finally added Robert Bihlmeyer man pages. Added them 
	to /tools as the *txt files are there too.

2002-05-01  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* usecode/compiler/uclex.ll,ucmain.cc: Added "-o outfile" option
	and "-I includdir" options.

2002-04-30  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/eggedit.cc: Now sets teleport data1 correctly.
	* objs/egg.cc (Egg_object): When receiving update from EStudio,
	set quality.  Also figure frame in all cases.
	* actors.cc,actorio.cc: Set/read 'assigned_usecode_flag'.
	* actors.cc: Update NPC name from EStudio.

2002-04-27  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.cc (Shape_frame): Highlight bottom of object when
	showing an outline.

	* server/server.cc: If !WIN32 and if $HOME/.exult exists, store
	the socket file there.
	* mapedit/studio.cc:  Look in $HOME/.exult for socket file.  Also,
	removed the "-d" option.

2002-04-25  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc : Added missing parenthesis
	* gamedat.cc : Namespace stuff

2002-04-25  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Create gamedat, savegames in $HOME/.exult if gamedat
	doesn't already exist.

2002-04-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Whoops!  Next_frame_max
	wasn't stopping at the right number.

	* actors.cc: Allow anything to go in 'back' spot.

	* gamedat.cc,gamewin.cc,game.cc:  get_game_identity() moved into
	Game_window class, handles compressed savegames, and is used to
	check IDENTITY before doing a restore.
