@@ -77,6 +77,11 @@
     <handler>on_main_window_focus_in_event</handler>
     <last_modification_time>Sun, 07 Apr 2002 09:02:57 GMT</last_modification_time>
   </signal>
+  <signal>
+    <name>configure_event</name>
+    <handler>on_main_window_configure_event</handler>
+    <last_modification_time>Thu, 09 May 2002 06:34:52 GMT</last_modification_time>
+  </signal>
   <title>ExultStudio</title>
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_NONE</position>
@@ -542,7 +547,7 @@
 	      <handler>on_play_button_clicked</handler>
 	      <last_modification_time>Sun, 15 Jul 2001 16:17:23 GMT</last_modification_time>
 	    </signal>
-	    <label>Play game</label>
+	    <label> Play </label>
 	    <relief>GTK_RELIEF_NORMAL</relief>
 	    <active>False</active>
 	    <child>
@@ -574,7 +579,7 @@
 		<handler>on_tile_grid_button_toggled</handler>
 		<last_modification_time>Fri, 20 Jul 2001 17:26:25 GMT</last_modification_time>
 	      </signal>
-	      <label>Tile grid</label>
+	      <label>Grid</label>
 	      <active>False</active>
 	      <draw_indicator>True</draw_indicator>
 	    </widget>
@@ -632,6 +637,72 @@
 		<snap>False</snap>
 		<wrap>False</wrap>
 		<value>0</value>
+		<lower>0</lower>
+		<upper>13</upper>
+		<step>1</step>
+		<page>4</page>
+		<page_size>4</page_size>
+		<child>
+		  <padding>2</padding>
+		  <expand>True</expand>
+		  <fill>True</fill>
+		</child>
+	      </widget>
+	    </widget>
+	  </widget>
+
+	  <widget>
+	    <class>GtkFrame</class>
+	    <name>frame138</name>
+	    <border_width>2</border_width>
+	    <label_xalign>0</label_xalign>
+	    <shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
+	    <child>
+	      <padding>0</padding>
+	      <expand>False</expand>
+	      <fill>False</fill>
+	    </child>
+
+	    <widget>
+	      <class>GtkHBox</class>
+	      <name>hbox35</name>
+	      <border_width>4</border_width>
+	      <homogeneous>False</homogeneous>
+	      <spacing>0</spacing>
+
+	      <widget>
+		<class>GtkLabel</class>
+		<name>hide_lift_label</name>
+		<label>Hide lift:  </label>
+		<justify>GTK_JUSTIFY_CENTER</justify>
+		<wrap>False</wrap>
+		<xalign>0.5</xalign>
+		<yalign>0.5</yalign>
+		<xpad>0</xpad>
+		<ypad>0</ypad>
+		<child>
+		  <padding>0</padding>
+		  <expand>False</expand>
+		  <fill>False</fill>
+		</child>
+	      </widget>
+
+	      <widget>
+		<class>GtkSpinButton</class>
+		<name>hide_lift_spin</name>
+		<can_focus>True</can_focus>
+		<signal>
+		  <name>changed</name>
+		  <handler>on_hide_lift_spin_changed</handler>
+		  <last_modification_time>Thu, 09 May 2002 06:11:16 GMT</last_modification_time>
+		</signal>
+		<climb_rate>1</climb_rate>
+		<digits>0</digits>
+		<numeric>False</numeric>
+		<update_policy>GTK_UPDATE_ALWAYS</update_policy>
+		<snap>False</snap>
+		<wrap>False</wrap>
+		<value>12</value>
 		<lower>0</lower>
 		<upper>13</upper>
 		<step>1</step>
